--- a/templates/bills.mustache
+++ b/templates/bills.mustache
@@ -39,10 +39,10 @@
         {{/IsPublic}}
       </div>
       <form id="logout-form" method="POST" action="/ulos" style="display: none"></form>
-      {{^Bills}}
+      {{^Documents}}
         <p>Ei tositteita</p>
-      {{/Bills}}
-      {{#Bills}}
+      {{/Documents}}
+      {{#Documents}}
         <h2>Kulut</h2>
         <table class="table table-striped table-hover">
           <thead>
@@ -58,9 +58,9 @@
             </tr>
           </thead>
           <tbody>
-            {{#Bills}}
-              <tr class="clickable-row" data-href="/tosite/{{BillID}}" style="cursor: pointer">
-                <td><a class="btn btn-default" href="/tosite/{{BillID}}">{{BillID}}</a></td>
+            {{#Documents}}
+              <tr class="clickable-row" data-href="/tosite/{{DocumentID}}" style="cursor: pointer">
+                <td><a class="btn btn-default" href="/tosite/{{DocumentID}}">{{DocumentID}}</a></td>
                 <td class="text-right">{{PaidDateFi}}</td>
                 <td class="text-right">{{Amount}}</td>
                 {{#CurrentUser.IsAdmin}}
@@ -74,10 +74,10 @@
                   {{/image_missing}}
                 </td>
               </tr>
-            {{/Bills}}
+            {{/Documents}}
           </tbody>
         </table>
-      {{/Bills}}
+      {{/Documents}}
     </div>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
