Rename bill -> document in filenames too

--- a/templates/document.mustache
+++ b/templates/document.mustache
@@ -170,6 +170,6 @@
     <script src="/static/js/bootstrap-select.min.js"></script>
     <script src="/static/js/bootstrap-select.fi.min.js"></script>
     <script src="/static/js/jq-ajax-progress.min.js"></script>
-    <script src="/static/js/bill.js"></script>
+    <script src="/static/js/document.js"></script>
   </body>
 </html>
