--- a/templates/documents.mustache
+++ b/templates/documents.mustache
@@ -81,6 +81,6 @@
     </div>
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/bills.js"></script>
+    <script src="/static/js/documents.js"></script>
   </body>
 </html>
