Update about page with user ID hashing

--- a/templates/about.mustache
+++ b/templates/about.mustache
@@ -20,11 +20,12 @@
         painamalla.</p>
       <h2>Yksityisyys ja tietoturva</h2>
       <h3>Google-tilit</h3>
-      <p>Massikone tallentaa Google-tilisi tiedoista ainoastaan nimen
-        ja käyttäjänumeron. Se joutuu pyytämään oikeuden julkisiin
+      <p>Massikone tallentaa Google-tilisi tiedoista ainoastaan
+        nimen. Lisäksi käyttäjänumero tallennetaan kevyesti salattuna.
+        Massikone joutuu pyytämään oikeuden julkisiin
         Google-profiilitietoihisi, sillä muuten Google ei anna nimeä
-        ollenkaan. Muita profiilitietoja kuin nimeä ei tallenneta eikä
-        käytetä mihinkään.
+        ollenkaan. Muita profiilitietoja ei tallenneta eikä käytetä
+        mihinkään.
       </p>
       <p>Voit halutessasi käyttää peitenimellä tehtyä Google-tiliä. Se
         ei haittaa kirjanpitoa.</p>
